--- a/practcice1.html
+++ b/practcice1.html
@@ -22,11 +22,23 @@
         .margin{
             margin:0px;
         }
+        img{
+            height:130px;
+            width:150px;
+        }
         </style>
     </head>
     <body>
         <h2 class="decp margin">About Me</h2>
         <p class="decp2 margin">I'm an Embedded Enthusiastic with tangible behaviour.</p>
         <p class="decp3 margin">I'm a graduate in bachelors technology,resident of kakinadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <a href="https://www.w3schools.com">visit w3schools.com!</a>
+        
+        <p> i am creating a link to
+        <a href="https://www.w3schools.com">w3schools home page</a>
+        <a href="practcice1.html">Another page</a>
+        <img src="static/ibhubs_logo.png" alt="ibhubs logo">
+        <img src="static/social+icons/facebook.svg" alt="facebook logo">
+        </p>
     </body>
 </html>
