--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -17,22 +17,30 @@
             .col-height {
                 margin-bottom: 10px;
                 margin-top: 10px;
-                height: 100px;
-                border: 2px solid white;
+                height: 50px;
+                border: 2px solid cadetblue;
+
+
+            }
+
+            .col-yellow {
+                background-color: #ff9900;
             }
 
             .col-blue {
-                background-color: blue;
+                background-color: #4a86e8;
+
             }
 
-            .col-red {
-                background-color: red;
+            img {
+                width: 350px;
+                height: 350px;
             }
         </style>
     </head>
 
     <body>
-        <div class="container">
+        <!--div class="container">
             <div class="row">
                 <div class="col-12 col-height col-blue"></div>
                 <div class="col-6 col-height col-red"></div>
@@ -59,15 +67,39 @@
                 <div class="col-1 col-height col-red"></div>
                 <div class="col-1 col-height col-blue"></div>
             </div>
-        </div>
-        <div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-9 col-height col-yellow"></div>
+        </div>-->
 
+        <!--div class="container">
+                <div class="row">
+                    <div class="col-9 col-height col-yellow">9</div>
+                    <div class="col-3 col-height col-blue"></div>
+                    <div class="col-4 col-height col-yellow"></div>
+                    <div class="col-3 col-height col-blue"></div>
+                    <div class="col-5 col-height col-yellow"></div>
+                    <div class="col-3 col-height col-blue"></div>
+                    <div class="col-6 col-height col-yellow"></div>
+                    <div class="col-3 col-height col-blue"></div>
 
                 </div>
-            </div>
+            </div>-->
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h1>iBHUBS</h1>
 
+                    <h6>PAN INDIA STARTUP HUB!</h6>
+                    <br>
+                    <p>500 hubs with 4 spokes each,establishing a total<br> of 2500 centers across india by the end of 2019</p>
+
+                    <br>
+                    <p>With this,world-class innovations and best<br> practices can reach people across the nation<br> rapidy
+                    </p>
+                </div>
+                <div class="col-6">
+                    <img src="static/ibhubs_logo.png">
+                </div>
+            </div>
         </div>
+
+
     </body>
