--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -16,7 +16,7 @@
         <style>
             .col-height {
                 margin-bottom: 10px;
-                margin-top: 10px;
+                margin-top: 25px;
                 height: 50px;
                 border: 2px solid cadetblue;
 
@@ -30,6 +30,10 @@
             .col-blue {
                 background-color: #4a86e8;
 
+            }
+
+            .logo {
+                object-fit: contain;
             }
 
             img {
@@ -95,7 +99,7 @@
                     <p>With this,world-class innovations and best<br> practices can reach people across the nation<br> rapidy
                     </p>
                 </div>
-                <div class="col-6">
+                <div class="col-6 logo">
                     <img src="static/ibhubs_logo.png">
                 </div>
             </div>
