--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -14,31 +14,14 @@
         <script src="bootstrap/popper.min.js"></script>
         <script src="bootstrap/bootstrap.min.js"></script>
         <style>
-            .col-height {
-                margin-bottom: 10px;
-                margin-top: 25px;
-                height: 50px;
-                border: 2px solid cadetblue;
-
-
-            }
-
-            .col-yellow {
-                background-color: #ff9900;
-            }
-
-            .col-blue {
-                background-color: #4a86e8;
-
-            }
-
             .logo {
                 object-fit: contain;
+                background-color: cadetblue;
+
             }
 
-            img {
-                width: 350px;
-                height: 350px;
+            .col-height {
+                background-color: red;
             }
         </style>
     </head>
@@ -88,7 +71,7 @@
             </div>-->
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 col-height">
                     <h1>iBHUBS</h1>
 
                     <h6>PAN INDIA STARTUP HUB!</h6>
@@ -99,9 +82,9 @@
                     <p>With this,world-class innovations and best<br> practices can reach people across the nation<br> rapidy
                     </p>
                 </div>
-                <div class="col-6 logo">
-                    <img src="static/ibhubs_logo.png">
-                </div>
+
+                <img class="col-6 logo" src="static/ibhubs_logo.png">
+
             </div>
         </div>
 
