--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -14,78 +14,119 @@
         <script src="bootstrap/popper.min.js"></script>
         <script src="bootstrap/bootstrap.min.js"></script>
         <style>
-            .logo {
+            /*.logo {
                 object-fit: contain;
                 background-color: cadetblue;
 
+            }*/
+
+            /* .col-height {
+                background-color: red;
+
+            }*/
+
+            /*.ibhubs {
+                padding: 70px;
+                text-align: center;
             }
 
-            .col-height {
-                background-color: red;
+
+            img {
+                display: block;
+
+                margin-left: auto;
+                margin-right: auto;
+            }*/
+
+            /*  * {
+                border: 2px dotted cadetblue;
+                padding: 20px;
+            }*/
+
+            ul {
+                list-style-type: none;
+                padding-left: 0px;
+                margin-bottom: 0px;
+
+
+            }
+
+            img {
+                border: 2px dotted red;
+                margin-top: -50px;
+                border-radius: 10px;
+                margin-bottom: 20px;
+            }
+
+            li {
+                border: 2px solid black;
+
+                text-align: center;
+
+            }
+
+            html {
+                border: none;
+                padding: 0px;
+
+            }
+
+            .ppp {
+                font-size: 20px;
+                margin-bottom: 20px;
+                margin-top: 20px;
+
+
+            }
+
+            .pad {
+                padding: 20px;
+            }
+
+            .pad1 {
+                padding: 60px;
+
+            }
+
+            .overflow {
+                overflow: auto;
             }
         </style>
     </head>
 
     <body>
-        <!--div class="container">
-            <div class="row">
-                <div class="col-12 col-height col-blue"></div>
-                <div class="col-6 col-height col-red"></div>
-                <div class="col-6 col-height col-blue"></div>
-            </div>
-            <div class="row">
-                <div class="col-4 col-height col-blue"></div>
-                <div class="col-4 col-height col-red"></div>
-                <div class="col-4 col-height col-blue"></div>
-                <div class="col-3 col-height col-red"></div>
-                <div class="col-3 col-height col-blue"></div>
-                <div class="col-3 col-height col-red"></div>
-                <div class="col-3 col-height col-blue"></div>
-                <div class="col-1 col-height col-red"></div>
-                <div class="col-1 col-height col-blue"></div>
-                <div class="col-1 col-height col-red"></div>
-                <div class="col-1 col-height col-blue"></div>
-                <div class="col-1 col-height col-red"></div>
-                <div class="col-1 col-height col-blue"></div>
-                <div class="col-1 col-height col-red"></div>
-                <div class="col-1 col-height col-blue"></div>
-                <div class="col-1 col-height col-red"></div>
-                <div class="col-1 col-height col-blue"></div>
-                <div class="col-1 col-height col-red"></div>
-                <div class="col-1 col-height col-blue"></div>
-            </div>
-        </div>-->
+        <div class="container pad1">
+            <ul class="row pad">
+                <li class="col-4">
 
-        <!--div class="container">
-                <div class="row">
-                    <div class="col-9 col-height col-yellow">9</div>
-                    <div class="col-3 col-height col-blue"></div>
-                    <div class="col-4 col-height col-yellow"></div>
-                    <div class="col-3 col-height col-blue"></div>
-                    <div class="col-5 col-height col-yellow"></div>
-                    <div class="col-3 col-height col-blue"></div>
-                    <div class="col-6 col-height col-yellow"></div>
-                    <div class="col-3 col-height col-blue"></div>
+                    <img src="static/Skills/C Language Icon/css.png">
+                    <div class="overflow">
+                        <p class="ppp">C</p>
 
-                </div>
-            </div>-->
-        <div class="container">
-            <div class="row">
-                <div class="col-6 col-height">
-                    <h1>iBHUBS</h1>
+                        <p>C is a programming language</p>
+                    </div>
+                </li>
 
-                    <h6>PAN INDIA STARTUP HUB!</h6>
-                    <br>
-                    <p>500 hubs with 4 spokes each,establishing a total<br> of 2500 centers across india by the end of 2019</p>
+                <li class="col-4">
+                    <img src="static/Skills/HTML Icon/html(1).png">
+                    <div class="overflow">
+                        <p class="ppp">HTML</p>
 
-                    <br>
-                    <p>With this,world-class innovations and best<br> practices can reach people across the nation<br> rapidy
-                    </p>
-                </div>
 
-                <img class="col-6 logo" src="static/ibhubs_logo.png">
+                        <p>hyper text markup langugage(HTML)is a markup language for creating a webpage</p>
+                    </div>
 
-            </div>
+                </li>
+                <li class="col-4">
+
+                    <img src="static/Skills/CSS Icon/css(1).png">
+                    <div class="overflow">
+                        <p class="ppp">CSS</p>
+                        <p>CSS stand for cascading style sheets.its purpose is to style html documents</p>
+                    </div>
+                </li>
+
+            </ul>
         </div>
 
 
