--- a/assignment-12/assignment12.html
+++ b/assignment-12/assignment12.html
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
     <script src="../bootstrap/jquery.min.js"></script>
     <script src="../bootstrap/popper.min.js"></script>
     <script src="../bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assignment12.css">
   </head>
-  <body></body>
+
+  <body>
+    <div class="container">
+      <div class="row row-1">
+        <div class="col-6">
+          <img class="image-1" src="assets/logo-gmail.png">GMAIL
+        </div>
+        <div class="col-2"></div>
+        <div class="col-4">
+          <a href="default.asp" class="btn1" target="blank">get gmail</a>
+        </div>
+      </div>
+      <div class="row row-2">
+        <div class="col-9">
+          <p>FOR WORK</p>
+        </div>
+        <div class="col-3">
+          <p>SIGN IN</p>
+        </div>
+      </div>
+      <div class="row row-3">
+        <div class="col-12">
+          <h2>Get more done with gmail</h2>
+          <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
+          <img class="image-2" src="assets/landing-page-image-mobile.png">
+        </div>
+        <div class="col-12">
+          <a href="default.asp" class="btn1" target="blank">get gmail</a>
+
+        </div>
+      </div>
+      <div class="row row-4">
+        <div class="col-12">
+          <h2>EXperience Gmail on any device</h2>
+          <p>The ease and simplicity of gmail,wherever you are</p>
+        </div>
+        <div class="col-6 shrink">
+          <img class="image-3" src="assets/google-playstore.png">
+        </div>
+        <div class="col-6 shrink">
+          <img class="image-3" src="assets/app-store.png">
+        </div>
+        <div class="col-12">
+          <img class="image-4" src="assets/experience-image-mobile-desktop.png">
+        </div>
+      </div>
+    </div>
+  </body>
+
 </html>
