--- a/assignment-12/assignment12.html
+++ b/assignment-12/assignment12.html
@@ -13,24 +13,25 @@
 
   <body>
     <div class="container">
-      <div class="row row-1">
+
+      <div class="row row-1 d-flex d-md-none ">
         <div class="col-6">
-          <img class="image-1" src="assets/logo-gmail.png">GMAIL
+          <img class="image-1" src="assets/logo-gmail.png"> &nbsp;Gmail
         </div>
         <div class="col-2"></div>
         <div class="col-4">
-          <a href="default.asp" class="btn1" target="blank">get gmail</a>
+          <a href="default.asp" class="btn1 float" target="blank">get gmail</a>
         </div>
       </div>
-      <div class="row row-2">
+      <div class="row row-2 d-flex d-md-none">
         <div class="col-9">
           <p>FOR WORK</p>
         </div>
-        <div class="col-3">
-          <p>SIGN IN</p>
+        <div class="col-3 ">
+          <p class="float">SIGN IN</p>
         </div>
       </div>
-      <div class="row row-3">
+      <div class="row row-3 d-flex d-md-none">
         <div class="col-12">
           <h2>Get more done with gmail</h2>
           <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
@@ -41,7 +42,7 @@
 
         </div>
       </div>
-      <div class="row row-4">
+      <div class="row row-4 d-flex d-md-none">
         <div class="col-12">
           <h2>EXperience Gmail on any device</h2>
           <p>The ease and simplicity of gmail,wherever you are</p>
@@ -56,7 +57,182 @@
           <img class="image-4" src="assets/experience-image-mobile-desktop.png">
         </div>
       </div>
-    </div>
+      <div class="row row-5 d-flex d-md-none">
+        <div class="col-12">
+          <h2>Stay organised instantly</h2>
+          <p>see whats new at a glance and decide what yoou want to read and respond to</p>
+          <img class="image-5" src="assets/stay-organised-instantly-mobile.png">
+        </div>
+      </div>
+      <div class="row row-6 d-flex d-md-none">
+        <div class="col-12">
+          <h2>Never drop the ball</h2>
+          <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
+          <img class="image-5" src="assets/never-drop-the-ball-mobile.png">
+        </div>
+      </div>
+      <div class="row row-7 d-flex d-md-none">
+        <div class="col-12">
+          <h2>Take action right from the inbox</h2>
+          <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
+          <img class="image-5" src="assets/take-action-mobile.png">
+        </div>
+      </div>
+
+      <div class="row row-8 d-flex d-md-none">
+        <div class="col-12">
+          <h2> Avoid suspicious emails</h2>
+          <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
+          <img class="image-5" src="assets/avoid-suspicious-emails-mobile.png">
+        </div>
+      </div>
+      <div class="row row-9 d-flex d-md-none">
+        <div class="col-12">
+          <img class="image-6" src="assets/logo-gmail.png">
+          <h3> get started with Gmail</h3>
+          <a href="default.asp" class="btn1" target="blank">get gmail</a>
+        </div>
+      </div>
+      <div class="row row-10 d-flex d-md-none">
+        <div class="col-12">
+          <h6> Google</h6>
+        </div>
+        <div class="col-2">
+          <p>Privacy</p>
+        </div>
+        <div class="col-2">
+          <p>Terms</p>
+        </div>
+        <div class="col-4">
+          <p>About Google</p>
+        </div>
+        <div class="col-4">
+          <p>Google Products</p>
+        </div>
+        <div class="col-12">
+          <p>Our policy</p>
+        </div>
+        <div class="col-1">
+          <img src="assets/question-mark.png">
+        </div>
+        <div class="col-3">
+          <p>Help</p>
+        </div>
+        <div class="col-3">
+          <p>English(India)</p>
+        </div>
+        <div class="col-3"></div>
+      </div>
+
+
+
+      <!--for *ipad-->
+
+      <div class="row d-none d-md-flex">
+        <div class="col-5">
+          <img class="image-1" src="assets/logo-gmail.png"> &nbsp;Gmail
+        </div>
+        <div class="col-2">
+          <p>FOR WORK</p>
+        </div>
+        <div class="col-2 ">
+          <p class="float">SIGN IN</p>
+        </div>
+        <div class="col-3">
+          <a href="default.asp" class="btn1 float" target="blank">create an account</a>
+        </div>
+      </div>
+      <div class="row row-11 d-none d-md-flex padd">
+        <div class="col-6 column1 ">
+          <center>
+            <h2>Get more done with gmail</h2>
+            <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
+          </center>
+
+        </div>
+        <div class="col-6  column2">
+          <img src="assets/landing-page-image-desktop.png" height=385px width=390px>
+        </div>
+      </div>
+      <div class="row row-12 d-none d-md-flex">
+        <div class="col-12">
+          <h2>EXperience Gmail on any device</h2>
+          <p>The ease and simplicity of gmail,wherever you are</p>
+        </div>
+        <div class="col-6 shrink">
+          <img class="image-3" src="assets/google-playstore.png">
+        </div>
+        <div class="col-6 shrink">
+          <img class="image-3" src="assets/app-store.png">
+        </div>
+        <div class="col-12">
+          <img src="assets/experience-image-mobile-desktop.png" height=480px width=950px>
+        </div>
+      </div>
+      <div class="row row-13 d-none d-md-flex margin">
+        <div class="col-6 bg right">
+          <h2>Stay organised instantly</h2>
+          <p>see whats new at a glance and decide what yoou want to read and respond to</p>
+          <img src="assets/stay-organised-instantly-desktop.png" height=150px width=350px>
+        </div>
+
+        <div class="col-6 bg">
+          <h2>Never drop the ball</h2>
+          <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
+          <img src="assets/never-drop-the-ball-desktop.png" height=150px width=350px>
+        </div>
+        < /div>      <div class="row row-14 d-none d-md-flex margin">
+        <div class="col-6 padding">
+          <h2>Take action right from the inbox</h2>
+          <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
+        </div>
+        <div class="col-6"> <img src="assets/take-action-desktop.png" height=150px width=350px></div>
+      </div>
+      <div class="row row-15 d-none d-md-flex margin">
+        <div class="col-6 right bg"><img class="image-5" src="assets/avoid-suspicious-emails-mobile.png"></div>
+
+        <div class="col-6 padding bg">
+          <h2> Avoid suspicious emails</h2>
+          <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
+        </div>
+      </div>
+      <div class="row row-16 d-none d-md-flex">
+        <div class="col-12 ">
+          <img class="image-6 margin" src="assets/logo-gmail.png">
+          <h3 class="margin">get started with Gmail</h3>
+          <a href="default.asp" class="btn1" target="blank">get gmail</a>
+        </div>
+      </div>
+      <div class="row row-17 d-none d-md-flex ">
+        <div class="col-12">
+          <h6> Google</h6>
+        </div>
+        <div class="col-1">
+          <p>Privacy</p>
+        </div>
+        <div class="col-1">
+          <p>Terms</p>
+        </div>
+        <div class="col-2">
+          <p>About Google</p>
+        </div>
+        <div class="col-2">
+          <p>Google Products</p>
+        </div>
+        <div class="col-2">
+          <p>Our policy</p>
+        </div>
+        <div class="col-2">
+          <img src="assets/question-mark.png">help
+        </div>
+
+        <div class="col-2">
+          <p>English(India)</p>
+        </div>
+
+
+
+      </div>
   </body>
 
 </html>
