--- a/assignment-12/assignment12.html
+++ b/assignment-12/assignment12.html
@@ -93,7 +93,7 @@
           <a href="default.asp" class="btn1" target="blank">get gmail</a>
         </div>
       </div>
-      <div class="row row-10 d-flex d-md-none">
+      <!--div class="row row-10 d-flex d-md-none">
         <div class="col-12">
           <h6> Google</h6>
         </div>
@@ -122,117 +122,178 @@
           <p>English(India)</p>
         </div>
         <div class="col-3"></div>
-      </div>
+      </div>-->
+      <div class="d-block d-md-none">
+        <ul>
+          <li class="li d-block">
+            <a href="#">google</a>
+          </li>
+          <li class="li d-inline-block">
+            <a href="#">privacy</a>
+          </li>
+          <li class="li d-inline-block">
+            <a href="#">terms</a>
+          </li>
+          <li class="li d-inline-block">
+            <a href="#">about google</a>
+          </li>
+          <li class="li d-inline-block">
+            <a href="#">google products</a>
+          </li>
+          <li class="li d-inline-block">
+            <a href="#">our policy</a>
+          </li>
+          <li class="li d-inline-block">
+            <a href=""><img src="assets/question-mark.png" style="width: 20px;height: 20px;">  Help</img></a>
+          </li>
+          <li class="li d-inline-block">
+            <a href="#">English (India)</a>
+          </li>
 
-
-
-      <!--for *ipad-->
-
-      <div class="row d-none d-md-flex">
-        <div class="col-5">
-          <img class="image-1" src="assets/logo-gmail.png"> &nbsp;Gmail
-        </div>
-        <div class="col-2">
-          <p>FOR WORK</p>
-        </div>
-        <div class="col-2 ">
-          <p class="float">SIGN IN</p>
-        </div>
-        <div class="col-3">
-          <a href="default.asp" class="btn1 float" target="blank">create an account</a>
-        </div>
-      </div>
-      <div class="row row-11 d-none d-md-flex padd">
-        <div class="col-6 column1 ">
-          <center>
-            <h2>Get more done with gmail</h2>
-            <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
-          </center>
-
-        </div>
-        <div class="col-6  column2">
-          <img src="assets/landing-page-image-desktop.png" height=385px width=390px>
-        </div>
-      </div>
-      <div class="row row-12 d-none d-md-flex">
-        <div class="col-12">
-          <h2>EXperience Gmail on any device</h2>
-          <p>The ease and simplicity of gmail,wherever you are</p>
-        </div>
-        <div class="col-6 shrink">
-          <img class="image-3" src="assets/google-playstore.png">
-        </div>
-        <div class="col-6 shrink">
-          <img class="image-3" src="assets/app-store.png">
-        </div>
-        <div class="col-12">
-          <img src="assets/experience-image-mobile-desktop.png" height=480px width=950px>
-        </div>
-      </div>
-      <div class="row row-13 d-none d-md-flex margin">
-        <div class="col-6 bg right">
-          <h2>Stay organised instantly</h2>
-          <p>see whats new at a glance and decide what yoou want to read and respond to</p>
-          <img src="assets/stay-organised-instantly-desktop.png" height=150px width=350px>
-        </div>
-
-        <div class="col-6 bg">
-          <h2>Never drop the ball</h2>
-          <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
-          <img src="assets/never-drop-the-ball-desktop.png" height=150px width=350px>
-        </div>
-        < /div>      <div class="row row-14 d-none d-md-flex margin">
-        <div class="col-6 padding">
-          <h2>Take action right from the inbox</h2>
-          <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
-        </div>
-        <div class="col-6"> <img src="assets/take-action-desktop.png" height=150px width=350px></div>
-      </div>
-      <div class="row row-15 d-none d-md-flex margin">
-        <div class="col-6 right bg"><img class="image-5" src="assets/avoid-suspicious-emails-mobile.png"></div>
-
-        <div class="col-6 padding bg">
-          <h2> Avoid suspicious emails</h2>
-          <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
-        </div>
-      </div>
-      <div class="row row-16 d-none d-md-flex">
-        <div class="col-12 ">
-          <img class="image-6 margin" src="assets/logo-gmail.png">
-          <h3 class="margin">get started with Gmail</h3>
-          <a href="default.asp" class="btn1" target="blank">get gmail</a>
-        </div>
-      </div>
-      <div class="row row-17 d-none d-md-flex ">
-        <div class="col-12">
-          <h6> Google</h6>
-        </div>
-        <div class="col-1">
-          <p>Privacy</p>
-        </div>
-        <div class="col-1">
-          <p>Terms</p>
-        </div>
-        <div class="col-2">
-          <p>About Google</p>
-        </div>
-        <div class="col-2">
-          <p>Google Products</p>
-        </div>
-        <div class="col-2">
-          <p>Our policy</p>
-        </div>
-        <div class="col-2">
-          <img src="assets/question-mark.png">help
-        </div>
-
-        <div class="col-2">
-          <p>English(India)</p>
-        </div>
-
-
+        </ul>
 
       </div>
+    </div>
+
+
+
+    <!--for *ipad-->
+
+    <div class="row d-none d-md-flex">
+      <div class="col-6">
+        <img class="image-1" src="assets/logo-gmail.png"> &nbsp;Gmail
+      </div>
+      <div class="col-2">
+        <p>FOR WORK</p>
+      </div>
+      <div class="col-2">
+        <p>SIGN IN</p>
+      </div>
+      <div class="col-2">
+        <a href="default.asp" class="btn1 float" target="blank">create an account</a>
+      </div>
+    </div>
+    <div class="row row-11 d-none d-md-flex padd">
+      <div class="col-6 column1 ">
+        <center>
+          <h2>Get more done with gmail</h2>
+          <p>Now more secure,smarter and easier to use-helping you save time and do more with your inbox</p>
+        </center>
+
+      </div>
+      <div class="col-6  column2">
+        <img src="assets/landing-page-image-desktop.png" height=385px width=390px>
+      </div>
+    </div>
+    <div class="row row-12 d-none d-md-flex">
+      <div class="col-12">
+        <h2>EXperience Gmail on any device</h2>
+        <p>The ease and simplicity of gmail,wherever you are</p>
+      </div>
+      <div class="col-6 shrink">
+        <img class="image-3" src="assets/google-playstore.png">
+      </div>
+      <div class="col-6 shrink">
+        <img class="image-3" src="assets/app-store.png">
+      </div>
+      <div class="col-12">
+        <img src="assets/experience-image-mobile-desktop.png" height=480px width=950px>
+      </div>
+    </div>
+    <div class="row row-13 d-none d-md-flex">
+      <div class="col-6 bg  ">
+        <h2>Stay organised instantly</h2><br>
+        <p>see whats new at a glance and decide what yoou want to read and respond to</p>
+        <img src="assets/stay-organised-instantly-desktop.png" style="width: 100%;height: 150px;"></img>
+      </div>
+      <div class="col-6 bg">
+        <h2>Never drop the ball</h2><br>
+        <p>get nudges that remind you to follow up and respond to messages,so that nothing slips through the cracks</p>
+        <img src="assets/never-drop-the-ball-desktop.png" style="height:150px; width: 100%;"></img>
+      </div>
+    </div>
+    <div class=" row row-14 d-none d-md-flex margin ">
+      <div class="col-6 padding ">
+        <h2>Take action right from the inbox</h2>
+        <p>View attachments,rsvp to events,snooze messages and more without opening any emails</p>
+      </div>
+      <div class="col-6 "> <img src="assets/take-action-desktop.png " height=150px width=350px></div>
+    </div>
+    <div class="row row-15 d-none d-md-flex margin ">
+      <div class="col-6 right bg "><img class="image-5 " src="assets/avoid-suspicious-emails-mobile.png "></div>
+
+      <div class="col-6 padding bg ">
+        <h2> Avoid suspicious emails</h2>
+        <p>Gmail blocks 99.9% of dangerous emails before they reach you. If we think something seems phish-y you'll get a warning</p>
+      </div>
+    </div>
+    <div class="row row-16 d-none d-md-flex ">
+      <div class="col-12 ">
+        <img class="image-6 margin " src="assets/logo-gmail.png ">
+        <h3 class="margin ">get started with Gmail</h3>
+        <a href="default.asp " class="btn1 " target="blank ">get gmail</a>
+      </div>
+    </div>
+    <!--div class="row row-17 d-none d-md-flex ">
+          <div class="col-12 ">
+            <h6> Google</h6>
+          </div>
+          <div class="col-1 ">
+            <p>Privacy</p>
+          </div>
+          <div class="col-1 ">
+            <p>Terms</p>
+          </div>
+          <div class="col-2 ">
+            <p>About Google</p>
+          </div>
+          <div class="col-2 ">
+            <p>Google Products</p>
+          </div>
+          <div class="col-2 ">
+            <p>Our policy</p>
+          </div>
+          <div class="col-2 ">
+            <img src="assets/question-mark.png ">help
+          </div>
+
+          <div class="col-2 ">
+            <p>English(India)</p>
+          </div>-->
+    <div class="d-none d-md-block ">
+      <ul>
+        <li class="li d-block ">
+          <a href="# ">google</a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href="# ">privacy</a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href="# ">terms</a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href="# ">about google</a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href="# ">google products</a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href="# ">our policy</a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href=" "><img src="assets/question-mark.png " style="width: 20px;height: 20px; ">  Help</img></a>
+        </li>
+        <li class="li d-inline-block ">
+          <a href="# ">English (India)</a>
+        </li>
+
+      </ul>
+
+    </div>
+
+
+
+    </div>
   </body>
 
 </html>
